--- a/index.html
+++ b/index.html
@@ -34,56 +34,58 @@
   </style>
 </head>
 
-<body style="background-color: whitesmoke;">
+<body style="background-color: white;">
   <div class="container">
-    <div class="row mt-5">
-      <div class="col-md-3"></div>
-      <div class="col-md-5">
-        <h1>Conversor de Medidas</h1>
-      </div>
-    </div>
-
-    <div class="row mt-4">
-      <div class="col-md-2 mr-4"></div>
-      <div class="col-md-5 ml-5 mb-1">
-
-        <div class="input-group mb-3">
-          <button id="btn1" class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            Converter de
-          </button>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#" onclick="medidaUm('ml')">Metros</a></li>
-            <li><a class="dropdown-item" href="#" onclick="medidaUm('km')">Quilômetros</a></li>
-            <li><a class="dropdown-item" href="#" onclick="medidaUm('pes')">Pés</a></li>
-          </ul>
-          <input id="valor" type="number" class="form-control" aria-label="Text input with dropdown button" />
+    <div style="background-color: whitesmoke; height: 400px; border-radius: 1em; width: 1000px; margin: 0 auto; padding-top: 5px; margin-top: 15px;">
+      <div class="row mt-5">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+          <h1>Conversor de Medidas</h1>
         </div>
       </div>
-    </div>
 
-    <div class="row">
-      <div class="col-md-2 mr-4"></div>
-      <div class="col-md-5 ml-5">
-        <div class="input-group mb-3">
-          <button id="btn2" class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            Para
-          </button>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#" onclick="medidaDois('ml')">Metros</a></li>
-            <li><a class="dropdown-item" href="#" onclick="medidaDois('km')">Quilômetros</a></li>
-            <li><a class="dropdown-item" href="#" onclick="medidaDois('pes')">Pés</a></li>
-          </ul>
-          <input id="inputResultado" type="text" class="form-control" aria-label="Text input with dropdown button"
-            disabled />
+      <div class="row mt-4">
+        <div class="col-md-2 mr-4"></div>
+        <div class="col-md-5 ml-5 mb-1">
+
+          <div class="input-group mb-3">
+            <button id="btn1" class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Converter de
+            </button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#" onclick="medidaUm('ml')">Metros</a></li>
+              <li><a class="dropdown-item" href="#" onclick="medidaUm('km')">Quilômetros</a></li>
+              <li><a class="dropdown-item" href="#" onclick="medidaUm('pes')">Pés</a></li>
+            </ul>
+            <input id="valor" type="number" class="form-control" aria-label="Text input with dropdown button" />
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="row">
-      <div class="col-md-4 ml-5" style="margin-right: 25px;"></div>
-      <button id="btnCalc" onclick="Calcular()">Calcular</button>
+      <div class="row">
+        <div class="col-md-2 mr-4"></div>
+        <div class="col-md-5 ml-5">
+          <div class="input-group mb-3">
+            <button id="btn2" class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Para
+            </button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#" onclick="medidaDois('ml')">Metros</a></li>
+              <li><a class="dropdown-item" href="#" onclick="medidaDois('km')">Quilômetros</a></li>
+              <li><a class="dropdown-item" href="#" onclick="medidaDois('pes')">Pés</a></li>
+            </ul>
+            <input id="inputResultado" type="text" class="form-control" aria-label="Text input with dropdown button"
+              disabled />
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4 ml-5" style="margin-right: 25px;"></div>
+        <button id="btnCalc" onclick="Calcular()">Calcular</button>
+      </div>
     </div>
   </div>
 
